2002-09-07  Thomas Flynn  <tflynn@users.sourceforge.net>

        * src/openvrml/OpenVRML/ScriptJDK.cpp: Additional documentation.
          Fix ConstMFColor/MFColor CreateObject methods. Fix issues with
          retrieving and setting eventOut fields. Workaround for
          BaseNode::getBrowser problems.

        * java/vrml/node/Script.java,
          java/vrml/BaseNode.java: Temporary workaround for getBrowser
          problems.

        * java/vrml/ConstMFInt32.java: Update javadoc comments.

        * models/TestJSAI.java: Add additional tests of JSAI functionality.

2002-09-06  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/field.cpp: Fixed size increment in
          array_vector<>::insert.

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/node.cpp: Made Node::initialize
          recursive, so it no longer needs to be used with a
          NodeVisitor.

        * src/openvrml/OpenVRML/browser.cpp: Set default [exposed]field
          values for PROTO instances. We still need some additional
          magic to handle field values that aren't IS'd to anything in
          the implementation.

2002-08-31  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/nodeptr.cpp: Fixed bug in NodePtr::reset
          when 0 is passed as the argument.

2002-08-29  Thomas Flynn  <tflynn@users.sourceforge.net>

        * java/vrml/BaseNode.java,
          java/vrml/MField.java,
          java/vrml/field/ConstMFColor.java,
          java/vrml/field/ConstMFFloat.java,
          java/vrml/field/ConstSFImage.java,
          java/vrml/field/ConstSFVec2f.java,
          java/vrml/field/ConstSFVec3f.java,
          java/vrml/field/SFImage.java,
          java/vrml/field/SFString.java,
          java/vrml/field/SFVec2f.java,
          java/vrml/field/SFVec3f.java: Update javadoc comments.

2002-08-28  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp,